{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 93,
  "lineage": "19373879-b1d3-52c5-4b91-1976c1a48ccd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0898cbc7a7ba8e39d",
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:elastic-ip/eipalloc-0898cbc7a7ba8e39d",
            "association_id": "eipassoc-0611573d50368d18d",
            "domain": "vpc",
            "id": "eipalloc-0898cbc7a7ba8e39d",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-072e756519ec021f1",
            "private_dns": "ip-10-0-1-234.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-3-0-159-53.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.159.53",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d774e81982a7bc96",
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:elastic-ip/eipalloc-0d774e81982a7bc96",
            "association_id": "eipassoc-0660f75d5824c3a0e",
            "domain": "vpc",
            "id": "eipalloc-0d774e81982a7bc96",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-00e39ad01da8c37dd",
            "private_dns": "ip-10-0-3-235.ap-southeast-1.compute.internal",
            "private_ip": "10.0.3.235",
            "public_dns": "ec2-47-128-168-5.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.128.168.5",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:internet-gateway/igw-05f3539b432e6f4e2",
            "id": "igw-05f3539b432e6f4e2",
            "owner_id": "471112861707",
            "tags": {
              "Name": "bagus-testing-igw"
            },
            "tags_all": {
              "Name": "bagus-testing-igw"
            },
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0898cbc7a7ba8e39d",
            "association_id": "eipassoc-0611573d50368d18d",
            "connectivity_type": "public",
            "id": "nat-05e61c712b56d2cf9",
            "network_interface_id": "eni-072e756519ec021f1",
            "private_ip": "10.0.1.234",
            "public_ip": "3.0.159.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03d50256b54db5eee",
            "tags": {
              "Name": "bagus-testing-nat-gw-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bagus-testing-nat-gw-ap-southeast-1a"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d774e81982a7bc96",
            "association_id": "eipassoc-0660f75d5824c3a0e",
            "connectivity_type": "public",
            "id": "nat-0bf7c653f06b6f64a",
            "network_interface_id": "eni-00e39ad01da8c37dd",
            "private_ip": "10.0.3.235",
            "public_ip": "47.128.168.5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-045c77993c08883c1",
            "tags": {
              "Name": "bagus-testing-nat-gw-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bagus-testing-nat-gw-ap-southeast-1b"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_1_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08017925cada11da61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05e61c712b56d2cf9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08017925cada11da6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_1",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private_1_rtb",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_2_nat_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0675deb87504e0a251080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bf7c653f06b6f64a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0675deb87504e0a25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip_2",
            "aws_nat_gateway.nat_2",
            "aws_route_table.private_2_rtb",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05f3539b432e6f4e2",
            "id": "r-rtb-08955e84dd8a1710a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08955e84dd8a1710a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rtb",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_1_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:route-table/rtb-08017925cada11da6",
            "id": "rtb-08017925cada11da6",
            "owner_id": "471112861707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05e61c712b56d2cf9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bagus-testing-rtb-private-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bagus-testing-rtb-private-ap-southeast-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_2_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:route-table/rtb-0675deb87504e0a25",
            "id": "rtb-0675deb87504e0a25",
            "owner_id": "471112861707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bf7c653f06b6f64a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bagus-testing-rtb-private-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bagus-testing-rtb-private-ap-southeast-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:route-table/rtb-08955e84dd8a1710a",
            "id": "rtb-08955e84dd8a1710a",
            "owner_id": "471112861707",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05f3539b432e6f4e2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bagus-testing-rtb-public"
            },
            "tags_all": {
              "Name": "bagus-testing-rtb-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f80c93d786762d6c",
            "route_table_id": "rtb-08017925cada11da6",
            "subnet_id": "subnet-0c69d1c42a2db85e4"
          },
          "dependencies": [
            "aws_route_table.private_1_rtb",
            "aws_subnet.private_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191d08262e678885",
            "route_table_id": "rtb-0675deb87504e0a25",
            "subnet_id": "subnet-03cd6a17d84c27a8b"
          },
          "dependencies": [
            "aws_route_table.private_2_rtb",
            "aws_subnet.private_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1f82fe79ad5e8dd",
            "route_table_id": "rtb-08955e84dd8a1710a",
            "subnet_id": "subnet-03d50256b54db5eee"
          },
          "dependencies": [
            "aws_route_table.public_rtb",
            "aws_subnet.public_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d81d9260bbfff7eb",
            "route_table_id": "rtb-08955e84dd8a1710a",
            "subnet_id": "subnet-045c77993c08883c1"
          },
          "dependencies": [
            "aws_route_table.public_rtb",
            "aws_subnet.public_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "s3_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f80c93d786762d6c",
            "route_table_id": "rtb-08017925cada11da6",
            "subnet_id": "subnet-0c69d1c42a2db85e4"
          },
          "dependencies": [
            "aws_route_table.private_1_rtb",
            "aws_subnet.private_1",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "s3_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0191d08262e678885",
            "route_table_id": "rtb-0675deb87504e0a25",
            "subnet_id": "subnet-03cd6a17d84c27a8b"
          },
          "dependencies": [
            "aws_route_table.private_2_rtb",
            "aws_subnet.private_2",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:subnet/subnet-0c69d1c42a2db85e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c69d1c42a2db85e4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112861707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bagus-testing-private-subnet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bagus-testing-private-subnet-ap-southeast-1a"
            },
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:subnet/subnet-03cd6a17d84c27a8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03cd6a17d84c27a8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112861707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bagus-testing-private-subnet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bagus-testing-private-subnet-ap-southeast-1b"
            },
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:subnet/subnet-03d50256b54db5eee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d50256b54db5eee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112861707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bagus-testing-public-subnet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "bagus-testing-public-subnet-ap-southeast-1a"
            },
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:subnet/subnet-045c77993c08883c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045c77993c08883c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112861707",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bagus-testing-public-subnet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "bagus-testing-public-subnet-ap-southeast-1b"
            },
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:vpc/vpc-046f8d6a1b6324caf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a9f2244799f2173d",
            "default_route_table_id": "rtb-094a5d329d55576ef",
            "default_security_group_id": "sg-041c6905f4145fb2d",
            "dhcp_options_id": "dopt-083f792ee4c94dd90",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-046f8d6a1b6324caf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094a5d329d55576ef",
            "owner_id": "471112861707",
            "tags": {
              "Name": "bagus-testing-vpc"
            },
            "tags_all": {
              "Name": "bagus-testing-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:471112861707:vpc-endpoint/vpce-09fe45a0180935cd9",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-09fe45a0180935cd9",
            "owner_id": "471112861707",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0675deb87504e0a25",
              "rtb-08017925cada11da6"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "Name": "bagus-testing-vpce-s3"
            },
            "tags_all": {
              "Name": "bagus-testing-vpce-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-046f8d6a1b6324caf"
          },
          "dependencies": [
            "aws_route_table.private_1_rtb",
            "aws_route_table.private_2_rtb",
            "aws_vpc.main_vpc"
          ]
        }
      ]
    }
  ]
}